--- a/client/src/app/components/nav/nav.component.css
+++ b/client/src/app/components/nav/nav.component.css
@@ -11,6 +11,10 @@
     color: #931c3c;
 }
 
+.active {
+    font-weight: bold;
+}
+
 nav, .navbar {
     transition: 1s;
 }
@@ -21,6 +25,6 @@ nav, .navbar {
 
 .black {
     background-color: rgba(52, 58, 64, 1) !important;
-    -webkit-box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.3);
-    box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.3);
+    -webkit-box-shadow: 4px 4px 4px;
+    box-shadow: 4px 4px 4px;
 }
