--- a/client/src/app/components/skills/skills.component.html
+++ b/client/src/app/components/skills/skills.component.html
@@ -3,7 +3,7 @@
         <div class="row content">
             <div class="skill col-sm-4">
                 <div class="round">
-                    <p><i class="fas fa-expand-alt"></i></p>
+                    <img src="assets/yoga.svg" alt="yoga" />
                 </div>
 
                 <h4>Flexibilité</h4>
@@ -11,15 +11,15 @@
 
             <div class="skill col-sm-4">
                 <div class="round">          
-                    <p><i class="fas fa-medal"></i></p>
+                    <img src="assets/muscle.svg" alt="muscle" />
                 </div>
 
-                <h4>Rigoureusité</h4>
+                <h4>Rigourosité</h4>
             </div>
 
             <div class="skill col-sm-4">
                 <div class="round">
-                    <p><i class="fas fa-dumbbell"></i></p>
+                    <img src="assets/growth.svg" alt="growth" />
                 </div>
 
                 <h4>Évolutivité</h4>
