--- a/client/src/app/pages/admin/admin.component.html
+++ b/client/src/app/pages/admin/admin.component.html
@@ -1,1 +1,16 @@
-<p>admin works!</p>
+<section id="admin">
+    <div class="pika-card">
+        <img src="assets/pika2.png" alt="pika" />
+    </div>
+
+    <h2>J'ai pas eu le temps<br><span style="color: yellow"><i class="fas fa-frown"></i></span></h2>
+
+</section>
+
+
+<video controls autoplay loop id="bgvid">
+    <source src="assets/rain.mp4"
+            type="video/mp4">
+
+    Désolé, votre navigateur ne prend pas en charge cette vidéo.
+</video>
