--- a/client/src/app/pages/cv/cv.component.html
+++ b/client/src/app/pages/cv/cv.component.html
@@ -1,5 +1,5 @@
 <section id="cv" class="container-fluid">
-    <div class="container">
+    <div class="container content">
         <div class="row">
             <div class="col-lg-4">
                 <app-cv-header></app-cv-header>
