--- a/client/src/app/components/cv-header/cv-header.component.css
+++ b/client/src/app/components/cv-header/cv-header.component.css
@@ -2,6 +2,7 @@
     background-color: white;
     padding: 20px;
     border-radius: 5px;
+    box-shadow: 2px 2px 2px black;
 }
 
 #cv-header p, #cv-header a {
