--- a/client/src/app/components/header/header.component.css
+++ b/client/src/app/components/header/header.component.css
@@ -41,14 +41,14 @@ header {
     font-size: 145px;
     margin: 0;
     line-height: 145px;
-    /* text-shadow: 2px 2px 2px grey; */
+    text-shadow: 2px 2px 2px;
 }
 
 .title h2 {
     font-size: 40px;
     line-height: 35px;
     margin: 0;
-    /* text-shadow: 2px 2px 2px grey; */
+    text-shadow: 2px 2px 2px black;
 }
 
 .picture {
@@ -58,7 +58,7 @@ header {
     overflow: hidden;
     border: 4px solid #931c3c;
     margin-bottom: 20px;
-    /* box-shadow: 2px 2px 2px grey; */
+    box-shadow: 2px 2px 2px black;
 }
 
 .picture img {
@@ -71,10 +71,13 @@ header {
 
 .btn-danger {
     background-color: #931c3c;
+    box-shadow: 2px 2px 2px black;
+    transition: .5s;
 }
 
 .btn-danger:hover {
     background-color: rgb(163, 30, 30);
+    box-shadow: 0 0 0 black;
 }
 
 .scroll-down {
