--- a/client/src/app/components/nav/nav.component.html
+++ b/client/src/app/components/nav/nav.component.html
@@ -8,15 +8,15 @@
     <div class="menu collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/">Accueil</a>
+          <a class="nav-link" routerLink="/" routerLinkActive="active">Accueil</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" routerLink="cv">CV</a>
+          <a class="nav-link" routerLink="/cv" routerLinkActive="active">CV</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" routerLink="portfolio">Portfolio</a>
+          <a class="nav-link" routerLink="/portfolio" routerLinkActive="active">Portfolio</a>
         </li>
 
         <li class="nav-item">
