--- a/client/src/app/components/projects/projects.component.html
+++ b/client/src/app/components/projects/projects.component.html
@@ -6,16 +6,18 @@
 
         <div class="row content">
             <div class="card col-sm-12 col-md-4" *ngFor="let project of projects">
-                <div class="cadre">
-                    <img class="card-img-top" src="assets/{{ project.img }}" alt="{{ project.name }}">
-                </div>
-
-                <div class="card-body">
-                    <div class="project_title">
-                        <h5 class="card-title">{{ project.name }}</h5>
-                        <p>{{ project.company }} - {{ project.date }}</p>
+                <a routerLink="/portfolio">
+                    <div class="cadre">
+                        <img class="card-img-top" src="assets/{{ project.img }}" alt="{{ project.name }}">
                     </div>
-                </div>
+    
+                    <div class="card-body">
+                        <div class="project_title">
+                            <h5 class="card-title">{{ project.name }}</h5>
+                            <p>{{ project.company }} - {{ project.date }}</p>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
