--- a/client/src/app/components/skills/skills.component.css
+++ b/client/src/app/components/skills/skills.component.css
@@ -23,10 +23,20 @@
     border-radius: 50%;
     font-size: 50px;
     color: #931c3c;
+    box-shadow: 2px 2px 2px black;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.round img {
+    width: 100%;
 }
 
 h4 {
     color: white;
+    text-shadow: 2px 2px 2px black;
 }
 
 @media screen and (max-width: 540px) {
