--- a/client/src/app/pages/cv/cv.component.css
+++ b/client/src/app/pages/cv/cv.component.css
@@ -3,12 +3,18 @@
     height: 100vh;
     padding-top: 100px;
     padding-bottom: 100px;
-    background-image: url('src/assets/bg_cv.jpg');
+    background-image: url('src/assets/bg_cv2.jpg');
     background-size: cover;
     background-attachment: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.content {
+    background-color: rgba(255,255,255,.2);
+    padding: 15px;
+    border-radius: 5px;
 }
 
 a {
@@ -27,10 +33,13 @@ i {
 button {
     float: right;
     background-color: #931c3c;
+    box-shadow: 2px 2px 2px black;
+    transition: .5s;
 }
 
 button:hover {
     background-color: rgb(163, 30, 30);
+    box-shadow: 0 0 0 black;
 }
 
 button a {
